--- a/translations/credits.tex/pl.po
+++ b/translations/credits.tex/pl.po
@@ -6,7 +6,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Homm 3BG-mission-book\n"
-"POT-Creation-Date: 2024-06-30 21:05+0200\n"
+"POT-Creation-Date: 2024-07-03 09:52+0100\n"
 "PO-Revision-Date: 2024-06-29 16:10+0200\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
@@ -20,7 +20,9 @@ msgstr ""
 #. type: multicols*
 #: coops/sentinels.tex:5 coops/titans_stronghold.tex:5
 #: coops/emerald_island.tex:5 clash/bloody_grail.tex:5 clash/the_hunt.tex:5
-#: sections/credits.tex:10
+#: campaigns/inferno_devilish_plan.tex:6
+#: campaigns/inferno_steadwicks_fall.tex:5
+#: campaigns/inferno_deal_with_the_devil.tex:5 sections/credits.tex:10
 #, no-wrap
 msgid ""
 "{2}\n"
@@ -28,7 +30,9 @@ msgid ""
 msgstr ""
 
 #. type: multicols*
-#: coops/sentinels.tex:145 clash/the_hunt.tex:43 sections/credits.tex:25
+#: coops/sentinels.tex:145 clash/the_hunt.tex:43
+#: campaigns/inferno_steadwicks_fall.tex:198
+#: campaigns/inferno_deal_with_the_devil.tex:152 sections/credits.tex:25
 #, no-wrap
 msgid ""
 "\\columnbreak\n"
@@ -61,9 +65,13 @@ msgstr ""
 
 #. type: multicols*
 #: sections/credits.tex:13
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "This project shamelessly borrows best practices from the \\href{https://github.com/Heegu-sama/Homm3BG}{\\textbf{Rule Book Rewrite Project}}, including LaTeX code, GitHub engineering, and translation framework.\n"
+#| "You should check it out if you haven't seen it yet.\n"
+#| "\n"
 msgid ""
-"This project shamelessly borrows best practices from the \\href{https://github.com/Heegu-sama/Homm3BG}{\\textbf{Rule Book Rewrite Project}}, including LaTeX code, GitHub engineering, and translation framework.\n"
+"This project shamelessly borrows best practices from the \\href{https://github.com/Heegu-sama/Homm3BG}{\\textbf{Rule Book Rewrite Project}}, including \\LaTeX{} code, GitHub engineering, and translation framework.\n"
 "You should check it out if you haven't seen it yet.\n"
 "\n"
 msgstr ""
@@ -73,9 +81,12 @@ msgstr ""
 
 #. type: multicols*
 #: sections/credits.tex:15
-#, no-wrap
+#, fuzzy, no-wrap
+#| msgid ""
+#| "\\textbf{Scenario templating and LaTeX writing}: Tomáš Zeman, Andrzej Wiącek, Saveliy Ivanov\n"
+#| "\n"
 msgid ""
-"\\textbf{Scenario templating and LaTeX writing}: Tomáš Zeman, Andrzej Wiącek, Saveliy Ivanov\n"
+"\\textbf{Scenario templating and \\LaTeX{} writing}: Tomáš Zeman, Andrzej Wiącek, Saveliy Ivanov\n"
 "\n"
 msgstr ""
 "\\textbf{Szablony scenariuszy i pisanie LaTeX-a}: Tomáš Zeman, Andrzej Wiącek, Saveliy Ivanov\n"
